# reservoir

./: .gitignore  README.md  authenticate_google.py  flake.nix  process-compose.yaml  pyproject.toml
auth/: models.py  views.py
discordauth/: apps.py  backend.py  forms.py  local_settings.py  models.py  urls.py  views.py
discordauth/migrations/: 0001_initial.py  0002_discorduser_chosen_theme_discorduser_linked_gmail.py
discordauth/templates/puzzles/: userpage.html
puzzles/: admin.py  backend.py  commands.py  consumers.py  forms.py  google.py  models.py  routing.py  urls.py  views.py
puzzles/chat_commands/: __init__.py  base_command.py  ping.py  solve.py
puzzles/chat_commands/apis/: hdas.py  onelook.py
puzzles/chat_commands/calc/: command.py  evaluator.py
puzzles/migrations/: 0001_initial.py  0002_answer.py  0003_puzzle_is_meta.py  0004_puzzle_sheet_id.py  0005_multiway_rounds_schema.py  0006_migrate_rounds.py  0007_chatmessage.py  0007_discorduser.py  0008_puzzle_description.py  0009_merge_0007_chatmessage_0008_puzzle_description.py  0010_discorduser_chat_color.py  0011_chatmessage_is_system_and_more.py
puzzles/static/puzzles/: chat.js  puzzlepage.css  style.css
puzzles/static/puzzles/themes/: frappe.css  latte.css  macchiato.css  mocha.css
puzzles/templates/puzzles/: base.html  bigboard.html  landing.html  puzzlepage.html  userpage.html
web/: asgi.py  settings.py  urls.py
